[metadata]
license = Apache-2.0
name = kuksa_client
author = Eclipse KUKSA Project
author_email = kuksa-dev@eclipse.org
description = KUKSA Python Client and SDK
long_description = file:README.md
long_description_content_type = text/markdown
url=https://github.com/eclipse-kuksa/kuksa-python-sdk
project_urls=
  Source=https://github.com/eclipse-kuksa/kuksa-python-sdk
  Bug Tracker=https://github.com/eclipse-kuksa/kuksa-python-sdk/issues
classifiers =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Software Development

license_files =
    LICENSE

[options]
python_requires = >=3.11
install_requires =
    websockets >= 10.1
    cmd2 >= 4.0, <5.0
    pygments >= 2.15
    # Make sure to use the same version criteria in pyproject.toml and update requirements.txt after changing
    grpcio-tools == 1.82.1
    protobuf>=7.35.1, <8.0.0
    jsonpath-ng >= 1.5.3
    gnureadline >= 8.2; sys_platform == "darwin"
    pyreadline; sys_platform == "win32"
packages = find:

[options.extras_require]
test =
    pylint
    pytest
    pytest-asyncio
    pytest-cov
    pytest-mock
    pytest-timeout

[options.package_data]
kuksa_client =
    logging.ini
    logo

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    kuksa-client = kuksa_client.__main__:main
